test/samples/error/err_duplicate_var.w
var x = "cat"
var x = "dog"
print(x)